--- a/Source/Areas/Shared/css/areas-common.css
+++ b/Source/Areas/Shared/css/areas-common.css
@@ -15,6 +15,11 @@ html{
     font-size: 18px;
 }
 
+ul{
+    padding-left: 1rem;
+    margin: 0;
+}
+
 /* Variables */
 
 :root{
@@ -29,6 +34,11 @@ html{
 
 .cursor-pointer{
     cursor: pointer;
+
+    /* Prevents blue highlighting whenever you touch the app on chrome on mobiles. */
+
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .cursor-wait{
@@ -66,7 +76,7 @@ html{
 #app-nav{
     display: flex;
     position: absolute;
-    z-index: 2;
+    z-index: 10000;
     top: 24px;
     right: 24px;
     width: fit-content;
